Adding form.css and built structure of about page

--- a/styles/footer.css
+++ b/styles/footer.css
@@ -5,7 +5,7 @@ footer {
   width: 100%;
   height: 300px;
   font-family: "Spartan", sans-serif;
-  background-color: darkblue;
+  background-color: #541388;
   color: azure;
   display: flex;
   align-items: center;
