--- a/styles/nav.css
+++ b/styles/nav.css
@@ -6,7 +6,7 @@ nav {
   justify-content: space-between;
   align-items: center;
   font-family: "Spartan", sans-serif;
-  background-color: lightgoldenrodyellow;
+  background-color: #f3e9dc;
 }
 
 #home {
