--- a/styles/button.css
+++ b/styles/button.css
@@ -4,6 +4,6 @@
   background-color: white;
   padding: 15px 15px;
   font-size: 10px;
-  /* justify-content: center; */
   text-align: center;
+  margin: auto 0;
 }
