--- a/styles/global.css
+++ b/styles/global.css
@@ -7,7 +7,7 @@ body {
   max-width: 80%;
 }
 .container {
-  display: flex;
+  /* display: flex; */
   max-width: 70%;
   height: auto;
   border: 1px solid black;
