--- a/styles/headers.css
+++ b/styles/headers.css
@@ -1,5 +1,5 @@
 .header {
-  background-color: sandybrown;
+  background-color: #f3e9dc;
   text-align: center;
   font-family: "Spartan", sans-serif;
   padding: 30px 0;
