--- a/styles/button.css
+++ b/styles/button.css
@@ -1,5 +1,5 @@
 .button {
-  border: solid 2px red;
+  /* border: solid 2px red; */
   color: red;
   background-color: white;
   padding: 15px 15px;
