--- a/style.css
+++ b/style.css
@@ -1,7 +1,8 @@
 @import "./styles/global.css";
 @import "./styles/nav.css";
 @import "./styles/footer.css";
-@import "./styles/card.css";
+@import "./styles/cards.css";
 @import "./styles/button.css";
 @import "./styles/headers.css";
 @import "./styles/form.css";
+@import "./styles/paragraph.css";
