--- a/styles/form.css
+++ b/styles/form.css
@@ -1,3 +1,39 @@
-form {
-  margin: 0px auto;
+.form {
+  margin: auto;
+  width: 50%;
+  padding: 10px;
+}
+
+.form-group input {
+  border: 1px solid #ccc;
+  background: #fafafa;
+  height: 16px;
+  padding: 12px;
+  width: 100%;
+  margin: 20px 0;
+  margin-top: 5px;
+}
+
+#message {
+  height: 150px;
+}
+
+#submit {
+  margin-top: 0;
+}
+
+#get-in-touch {
+  display: block;
+}
+
+@media only screen and (max-width: 805px) {
+  #get-in-touch h2 {
+    font-size: 20px;
+  }
+  .form {
+    width: 90%;
+  }
+  .form-group input {
+    width: 90%;
+  }
 }
