--- a/styles/cards.css
+++ b/styles/cards.css
@@ -1,4 +1,4 @@
-.card {
+/* .card {
   border: solid black 1px;
   background-color: #f1f1f1;
   width: 250px;
@@ -8,4 +8,51 @@
 
 .card-img {
   width: 100%;
+} */
+
+.flex-container {
+  margin: 50px auto;
+  max-width: 70%;
+  display: flex;
+  flex-wrap: wrap;
+  /* background-color: DodgerBlue; */
+}
+
+.flex-container div {
+  background-color: #f1f1f1;
+  width: 250px;
+  margin: 10px auto;
+  /* text-align: center; */
+  /* line-height: 300px; */
+  /* font-size: 30px; */
+  height: 300px;
+  position: relative;
+}
+
+.card-title {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  color: #f1f1f1;
+  font-weight: bolder;
+  padding-left: 10px;
+  text-shadow: 2px 2px black;
+}
+
+.img-container {
+  /* width: 250px;
+  height: 300px; */
+  overflow: hidden;
+  /* margin: 0px; */
+  /* position: relative; */
+}
+.card-img {
+  position: absolute;
+  left: -1000%;
+  right: -1000%;
+  top: -1000%;
+  bottom: -1000%;
+  margin: auto;
+  min-height: 100%;
+  min-width: 100%;
 }
