--- a/styles/footer.css
+++ b/styles/footer.css
@@ -4,21 +4,23 @@ footer {
   bottom: 0;
   width: 100%;
   height: 300px;
-  font-family: "Spartan", sans-serif;
-  background-color: #541388;
+  background-color: darkblue;
   color: azure;
   display: flex;
   align-items: center;
   justify-content: center;
-  flex-wrap: wrap;
 }
 
-footer div h1 {
-  font-size: 10px;
+footer div h2 {
+  /* font-size: 10px; */
   text-align: center;
 }
-/* 
+
 .icons {
-  display: ;
-  margin: 0px auto;
-} */
+  font-size: 30px;
+  text-decoration: none;
+  color: azure;
+  display: flex;
+  justify-content: center;
+  padding-top: 15px;
+}
